Sample project update

--- a/app/src/main/res/layout/first_program_second_page_2_activity.xml
+++ b/app/src/main/res/layout/first_program_second_page_2_activity.xml
@@ -15,7 +15,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@mipmap/sample1_l"
+        app:srcCompat="@mipmap/kill_apple"
         app:layout_constraintStart_toEndOf="@+id/second_page_image_view_2"
         android:layout_marginStart="8dp" />
 
