--- a/app/src/main/res/layout/first_program_activity.xml
+++ b/app/src/main/res/layout/first_program_activity.xml
@@ -8,24 +8,24 @@
 
     <android.support.v7.widget.AppCompatImageView
         android:id="@+id/first_program_imageview"
-        app:srcCompat="@mipmap/sample1_l"
         android:layout_width="120dp"
-        android:transitionName="transition_first_program"
         android:layout_height="120dp"
-        app:layout_constraintStart_toStartOf="parent"
         android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:transitionName="transition_first_program"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="8dp" />
+        app:srcCompat="@mipmap/kill_apple" />
 
     <android.support.v7.widget.AppCompatImageView
         android:id="@+id/first_program_2_imageview"
-        app:srcCompat="@mipmap/ic_launcher"
         android:layout_width="120dp"
-        android:transitionName="transition_first_2_program"
         android:layout_height="120dp"
+        android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/first_program_imageview"
+        android:transitionName="transition_first_2_program"
         app:layout_constraintStart_toStartOf="parent"
-        android:layout_marginStart="8dp" />
+        app:layout_constraintTop_toBottomOf="@+id/first_program_imageview"
+        app:srcCompat="@mipmap/ic_launcher" />
 
 </android.support.constraint.ConstraintLayout>
