--- a/app/src/main/res/layout/second_program_second_page_activity.xml
+++ b/app/src/main/res/layout/second_program_second_page_activity.xml
@@ -3,4 +3,9 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <android.support.v7.widget.AppCompatImageView
+        android:id="@+id/second_program_activity_image_view_detail"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+
 </LinearLayout>
